# jaspQMLControlsPlugin

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  analysisbase.cpp  analysisbase.h  analysisform.cpp  analysisform.h  jasptheme.cpp  plugin.cpp  preferencesmodelbase.h  simpleDataSetModel.cpp  simpleDataSetModel.h
ALTNavigation/: altnavscope.cpp
boundcontrols/: boundcontroltableview.cpp  boundcontroltextarea.cpp
components/JASP/Controls/: ALTNavTag.qml  AddColumnField.qml  AssignButton.qml  AssignedPairsVariablesList.qml  AssignedRepeatedMeasuresCells.qml  AssignedVariablesList.qml  AvailableVariablesList.qml  BasicThreeButtonTableView.qml  BayesFactorType.qml  Button.qml  CIField.qml  CheckBox.qml  Chi2TestTableView.qml  ColorPalette.qml  ColumnLayout.qml  ComponentsList.qml  ComputedColumnField.qml  ContrastsList.qml  ControlErrorMessage.qml  CrossButton.qml  CustomContrastsTableView.qml  DataSetView.qml  Divider.qml  DropDown.qml  FactorsForm.qml  FileSelector.qml  Form.qml  FormulaField.qml  GridLayout.qml  Group.qml  HelpButton.qml  JAGSTextArea.qml  JASPScrollBar.qml  JagsTableView.qml  Label.qml  MenuButton.qml  ModelTermsList.qml  PercentField.qml  RadioButton.qml  RadioButtonGroup.qml  (+17 more)
controls/: comboboxbase.h  componentslistbase.h  datasetview.cpp  datasetview.h  expanderbuttonbase.h  jaspcontrol.h  jaspdoublevalidator.cpp  jaspdoublevalidator.h  jasplistcontrol.h  radiobuttonbase.h  radiobuttonsgroupbase.h  sourceitem.cpp  sourceitem.h  tableviewbase.cpp  tableviewbase.h  textareabase.cpp  textareabase.h  textinputbase.cpp  textinputbase.h  variablesformbase.h  variableslistbase.cpp  variableslistbase.h
models/: listmodelassignedinterface.cpp  listmodelcustomcontrasts.cpp  listmodeldraggable.cpp  listmodeldraggable.h  listmodelfactorlevels.cpp  listmodelfactorsform.cpp  listmodelinteractionassigned.cpp  listmodellayersassigned.cpp  listmodelmultinomialchi2test.cpp  listmodeltableviewbase.cpp  term.cpp  terms.cpp
rsyntax/: formula.cpp  formula.h  formulabase.h  formulasource.cpp  formulasource.h  rsyntax.cpp  rsyntax.h
sources/: analysisform.cpp  analysisform.h  plugin.cpp
sources/ALTNavigation/: altnavigation.h  altnavpostfixassignmentstrategy.cpp  altnavpostfixassignmentstrategy.h  altnavscope.cpp  altnavscope.h  altnavtagbase.cpp  altnavtagbase.h
sources/boundcontrols/: boundcontrollayers.cpp  boundcontrolmeasurescells.cpp
sources/controls/: checkboxbase.h  componentslistbase.h  factorlevellistbase.h  factorsformbase.cpp  factorsformbase.h  inputlistbase.h  jaspcontrol.cpp  jaspcontrol.h  jaspdoublevalidator.h  jasplistcontrol.cpp  jasplistcontrol.h  radiobuttonsgroupbase.h  sliderbase.h  sourceitem.cpp  tableviewbase.cpp  tableviewbase.h  textareabase.cpp  textareabase.h  textinputbase.cpp  textinputbase.h  variablesformbase.cpp  variableslistbase.cpp
sources/models/: listmodelcustomcontrasts.cpp  listmodeldraggable.cpp  listmodeldraggable.h  listmodelfiltereddataentry.cpp  listmodeljagsdatainput.cpp  listmodeltableviewbase.cpp  terms.cpp  terms.h
sources/rsyntax/: formula.cpp  formula.h  formulabase.h  formulasource.cpp  formulasource.h  rsyntax.cpp  rsyntax.h
sources/utilities/: messageforwarder.cpp
utilities/: appdirs.h
